--- a/frontend/curriculum.html
+++ b/frontend/curriculum.html
@@ -23,10 +23,10 @@
     <div class="bg-white p-6 rounded-xl shadow space-y-4">
       <h2 class="text-2xl font-bold text-gray-800">Subjects</h2>
 
-      <div class="space-y-2">
+      <div id="subject-dropdown" class="space-y-2">
         <label for="subject-select" class="block text-sm font-medium text-gray-700">Select a Subject</label>
         <select id="subject-select" onchange="onSubjectChange()" class="w-full px-4 py-2 border rounded">
-          <option value="">Loading...</option>
+          <option value="">All Subjects</option>
         </select>
       </div>
 
@@ -62,6 +62,9 @@
 
       if (userRole === "teacher") {
         document.getElementById("add-subject-form").classList.remove("hidden");
+        document.getElementById("subject-dropdown").classList.remove("hidden");
+      } else {
+        document.getElementById("subject-dropdown").classList.add("hidden");
       }
 
       fetchSubjects();
@@ -76,7 +79,7 @@
       const select = document.getElementById("subject-select");
       const subjectList = document.getElementById("subject-list");
 
-      select.innerHTML = '<option value="">Select a subject</option>';
+      select.innerHTML = '<option value="">All Subjects</option>';
       subjectList.innerHTML = "";
 
       subjects.forEach((subject) => {
@@ -107,6 +110,7 @@
         chapterSection.className = "pl-4 space-y-2";
 
         if (userRole === "teacher") {
+          chapterSection.style.display = "block"; // Show by default
           chapterSection.innerHTML += `
             <input id="new-chapter-${subject.id}" placeholder="New Chapter Name" class="px-2 py-1 border rounded w-64" />
             <button onclick="addChapter(${subject.id})" class="bg-mauve-600 text-white px-2 py-1 rounded hover:bg-mauve-700">Add Chapter</button>`;
@@ -119,6 +123,7 @@
 
         li.appendChild(chapterSection);
         subjectList.appendChild(li);
+
         fetchChapters(subject.id);
       });
     }
@@ -254,6 +259,8 @@
     function onSubjectChange() {
       const subjectId = document.getElementById("subject-select").value;
 
+      if (userRole !== "teacher") return;
+
       document.querySelectorAll("[id^='chapter-section-']").forEach(el => {
         el.style.display = "none";
       });
@@ -261,6 +268,10 @@
       if (subjectId) {
         const section = document.getElementById(`chapter-section-${subjectId}`);
         if (section) section.style.display = "block";
+      } else {
+        document.querySelectorAll("[id^='chapter-section-']").forEach(el => {
+          el.style.display = "block";
+        });
       }
     }
 
