--- a/frontend/curriculum.html
+++ b/frontend/curriculum.html
@@ -20,7 +20,7 @@
   <div class="max-w-5xl mx-auto space-y-8">
 
     <!-- Subject Section -->
-    <div class="bg-white p-6 rounded-xl shadow space-y-4">
+    <div class="bg-white p-6 rounded-xl shadow space-y-4" style="min-width: 24rem;">
       <h2 class="text-2xl font-bold text-gray-800">Subjects</h2>
 
       <div id="subject-dropdown" class="space-y-2">
