--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -40,6 +40,10 @@
     <textarea id="summary" rows="5" maxlength="200" placeholder="Optional summary..." class="w-full p-3 border rounded-lg"></textarea>
 
     <button type="submit" id="submit-btn" class="w-full bg-mauve-600 text-white py-2 rounded-lg hover:bg-mauve-700">Submit</button>
+      <p class="text-sm text-gray-500 text-center mt-4">
+         🔔 You can submit up to <strong>3 reflections per day</strong>. Make them count!
+      </p>
+
   </form>
 </div>
 
