--- a/frontend/teacher-refs.html
+++ b/frontend/teacher-refs.html
@@ -105,8 +105,8 @@ function refreshChapterDropdown() {
   if (selectedSubject && subjectChapterMap[selectedSubject]) {
     relevantChapters = subjectChapterMap[selectedSubject];
   } else {
-    Object.keys(chapterMap).forEach(id => {
-      relevantChapters.push({ id, title: chapterMap[id] });
+    Object.entries(chapterMap).forEach(([id, name]) => {
+      relevantChapters.push({ id, name });
     });
   }
 
@@ -160,7 +160,10 @@ async function fetchReflections(email = "", subjectId = "", chapterId = "") {
     const safeVideoURL = ref.video_url?.startsWith("http") ? ref.video_url : `${API_BASE}${ref.video_url || ""}`;
 
     card.innerHTML = `
-      <div class="font-bold text-gray-800 mb-1">👤 Student: ${ref.email}</div>
+      <div class="font-bold text-gray-800 mb-1">
+        👤 Student: ${ref.email}
+        ${ref.obsolete ? `<span class="ml-2 inline-block px-2 py-0.5 text-xs bg-red-100 text-red-700 rounded">Obsolete</span>` : ""}
+      </div>
       <div class="text-sm text-gray-700 mb-2 font-medium">📘 ${subjectTitle} – ${chapterName}</div>
       ${
         safeVideoURL ? `<video controls class="w-full rounded-lg mb-3"><source src="${safeVideoURL}" type="video/mp4"></video>` : `<p class="text-red-500 mb-3">No video available.</p>`
@@ -168,55 +171,58 @@ async function fetchReflections(email = "", subjectId = "", chapterId = "") {
       <div class="text-xs text-gray-500 mb-1"><strong>Submitted At:</strong> ${new Date(ref.submitted_at).toLocaleString()}</div>
       <p class="text-sm text-gray-700 mb-4"><strong>Video Description:</strong> ${ref.text_summary || "<em class='text-gray-400'>(No summary)</em>"}</p>
       <hr class="my-4 border-t border-gray-300" />
+      ${ref.obsolete ? `<p class="text-sm text-red-500 mt-2 text-center">⚠️ Feedback is disabled for obsolete reflections.</p>` : `
       <form class="feedback-form space-y-2">
         <label class="block text-sm font-medium text-gray-700">Feedback</label>
         <select class="status w-full border px-3 py-2 rounded-lg">
-        <option value="understood" ${ref.status === "understood" ? "selected" : ""}>Understood</option>
-        <option value="needs_review" ${ref.status === "needs_review" ? "selected" : ""}>Needs Review</option>
+          <option value="understood" ${ref.status === "understood" ? "selected" : ""}>Understood</option>
+          <option value="needs_review" ${ref.status === "needs_review" ? "selected" : ""}>Needs Review</option>
         </select>
         <textarea class="comment w-full border px-3 py-2 rounded-lg" maxlength="100" rows="2" placeholder="Comment (optional)">${ref.comment || ""}</textarea>
         <div class="char-count text-xs text-right text-gray-500">0 / 100</div>
         <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Submit Feedback</button>
         <p class="text-xs text-gray-500 text-center">🔔 You can give up to <strong>20 feedbacks per day</strong>.</p>
-      </form>
+      </form>`}
     `;
 
     const form = card.querySelector(".feedback-form");
-    const commentInput = form.querySelector(".comment");
-    const statusSelect = form.querySelector(".status");
-    const charCount = form.querySelector(".char-count");
+    if (form) {
+      const commentInput = form.querySelector(".comment");
+      const statusSelect = form.querySelector(".status");
+      const charCount = form.querySelector(".char-count");
 
-    charCount.textContent = `${commentInput.value.length} / 100`;
-    commentInput.addEventListener("input", () => {
-      const len = commentInput.value.length;
-      charCount.textContent = `${len} / 100`;
-      charCount.classList.toggle("text-red-500", len >= 90);
-    });
-
-    if (ref.status || ref.comment) {
-      renderStaticFeedback(form, ref.status, ref.comment);
-    }
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const status = statusSelect.value;
-      const comment = commentInput.value.trim();
-      if (comment.length > 100) return alert("Feedback is too long. Maximum 100 characters allowed.");
-
-      const fbRes = await fetch(`${API_BASE}/teacher/feedback`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json", "Authorization": `Bearer ${token}` },
-        body: JSON.stringify({ reflection_id: ref.id, status, comment })
+      charCount.textContent = `${commentInput.value.length} / 100`;
+      commentInput.addEventListener("input", () => {
+        const len = commentInput.value.length;
+        charCount.textContent = `${len} / 100`;
+        charCount.classList.toggle("text-red-500", len >= 90);
       });
 
-      if (fbRes.ok) {
-        renderStaticFeedback(form, status, comment);
-        alert("Feedback submitted!");
-      } else {
-        const err = await fbRes.json();
-        alert("Error: " + err.detail);
+      if (ref.status || ref.comment) {
+        renderStaticFeedback(form, ref.status, ref.comment);
       }
-    });
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const status = statusSelect.value;
+        const comment = commentInput.value.trim();
+        if (comment.length > 100) return alert("Feedback is too long. Maximum 100 characters allowed.");
+
+        const fbRes = await fetch(`${API_BASE}/teacher/feedback`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json", "Authorization": `Bearer ${token}` },
+          body: JSON.stringify({ reflection_id: ref.id, status, comment })
+        });
+
+        if (fbRes.ok) {
+          renderStaticFeedback(form, status, comment);
+          alert("Feedback submitted!");
+        } else {
+          const err = await fbRes.json();
+          alert("Error: " + err.detail);
+        }
+      });
+    }
 
     list.appendChild(card);
   }
