--- a/frontend/curriculum.html
+++ b/frontend/curriculum.html
@@ -172,6 +172,7 @@
         fetchSubjects();
       } else {
         alert("Failed to add subject");
+        console.error("Add subject error:", err);
       }
     }
 
