--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -58,39 +58,51 @@
       document.getElementById("edit-form").classList.toggle("hidden");
     }
 
-    document.getElementById("edit-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const newPassword = document.getElementById("new-password").value;
-      const confirmPassword = document.getElementById("confirm-password").value;
+document.getElementById("edit-form").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const newPassword = document.getElementById("new-password").value;
+  const confirmPassword = document.getElementById("confirm-password").value;
 
-      if (newPassword !== confirmPassword) {
-        alert("Passwords do not match.");
-        return;
-      }
+  if (newPassword !== confirmPassword) {
+    alert("Passwords do not match.");
+    return;
+  }
 
-      const res = await fetch(`${API_BASE}/update-user`, {
-        method: "PATCH",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": `Bearer ${token}`
-        },
-        body: JSON.stringify({ password: newPassword })
-      });
+  if (
+    newPassword.length < 8 ||
+    !/[A-Z]/.test(newPassword) ||
+    !/[a-z]/.test(newPassword) ||
+    !/\d/.test(newPassword) ||
+    !/[!@#$%^&*(),.?":{}|<>]/.test(newPassword)
+  ) {
+    alert("Password must be at least 8 characters and include uppercase, lowercase, number, and special character.");
+    return;
+  }
 
-      const text = await res.text();
-      try {
-        const data = JSON.parse(text);
-        if (res.ok) {
-          alert("Password updated successfully!");
-          document.getElementById("edit-form").reset();
-          toggleEditForm();
-        } else {
-          alert(data.detail || "Failed to update.");
-        }
-      } catch (err) {
-        alert("Something went wrong.");
-      }
-    });
+  const res = await fetch(`${API_BASE}/update-user`, {
+    method: "PATCH",
+    headers: {
+      "Content-Type": "application/json",
+      "Authorization": `Bearer ${token}`
+    },
+    body: JSON.stringify({ password: newPassword })
+  });
+
+  const text = await res.text();
+  try {
+    const data = JSON.parse(text);
+    if (res.ok) {
+      alert("Password updated successfully!");
+      document.getElementById("edit-form").reset();
+      toggleEditForm();
+    } else {
+      alert(data.detail || "Failed to update.");
+    }
+  } catch (err) {
+    alert("Something went wrong.");
+  }
+});
+
 
     async function fetchUser() {
       const res = await fetch(`${API_BASE}/me`, {
