--- a/frontend/my-reflections.html
+++ b/frontend/my-reflections.html
@@ -83,7 +83,7 @@ async function fetchReflections(subjectId = "") {
 
     item.innerHTML = `
       <div class="bg-white rounded-xl shadow hover:shadow-lg transition overflow-hidden flex flex-col h-full">
-        <video class="w-full h-40 object-cover" controls muted preload="metadata">
+        <video class="w-full h-40 object-cover" controls muted preload="metadata" poster="/images/video-thumbnail.jpg>
           <source src="${videoSrc}" type="video/mp4">
           Your browser does not support video playback.
         </video>
