--- a/frontend/teacher-refs.html
+++ b/frontend/teacher-refs.html
@@ -178,7 +178,7 @@ async function fetchReflections(email = "", subjectId = "", chapterId = "") {
       </div>
       <div class="text-sm text-gray-700 mb-2 font-medium">📘 ${subjectTitle} – ${chapterName}</div>
       ${
-        safeVideoURL ? `<video controls class="w-full rounded-lg mb-3"><source src="${safeVideoURL}" type="video/mp4"></video>` : `<p class="text-red-500 mb-3">No video available.</p>`
+        safeVideoURL ? `<video controls class="w-full rounded-lg mb-3" poster="/images/video-thumbnail.jpeg"><source src="${safeVideoURL}" type="video/mp4"></video>` : `<p class="text-red-500 mb-3">No video available.</p>`
       }
       <div class="text-xs text-gray-500 mb-1"><strong>Submitted At:</strong> ${new Date(ref.submitted_at).toLocaleString()}</div>
       <p class="text-sm text-gray-700 mb-4"><strong>Video Description:</strong> ${ref.text_summary || "<em class='text-gray-400'>(No summary)</em>"}</p>
